--- a/html.html
+++ b/html.html
@@ -22,7 +22,7 @@
         <a href="./src/AboutFolder/about.html" class="nav-link navItems ">About US</a>
         <a href="./src/cards/card.html" class="nav-link navItems ">services</a>
         <a href="./src/cardSlider/slider.html" class="nav-link navItems ">Training&Consulting</a>
-        <a href="" class="nav-link"><button class="btnNav">Login</button></a>
+        <!-- <a href="" class="nav-link"><button class="btnNav">Login</button></a> -->
       </nav>
     </div>
 <div id="nav2" class="navbar2 hidden" >
@@ -35,12 +35,11 @@
           <span></span>
         </div>
       </div>
-      
       <div class="menu">
-        <a href="#" class="active"><span class="icon fa fa-info-circle"></span><span class="text">About Us</span></a>
-        <a href="#"><span class="icon fa fa-suitcase"></span><span class="text">Portfolio</span></a>
-        <a href="#"><span class="icon fa fa-shopping-basket"></span><span class="text">Store</span></a>
-        <a href="#"><span class="icon fa fa-phone"></span><span class="text">Contacts</span></a>
+        <a href="" class="active"><span class="icon fa fa-solid fa-house"></span><span class="text">Home</span></a>
+        <a href="./src/cards/card.html"><span class="icon fa fa-suitcase"></span><span class="text">Services</span></a>
+        <a href="./src/cardSlider/slider.html"><span class="icon fa fa-solid fa-cloud"></span><span class="text">Training&Consulting</span></a>
+        <a href="./src/AboutFolder/about.html"><span class="icon fa fa-info-circle"></span><span class="text">About Us</span></a>
       </div>
     </div>
     <div class="logo m-2">
