--- a/src/AboutFolder/about.html
+++ b/src/AboutFolder/about.html
@@ -23,7 +23,7 @@
     <main class="animate__animated animate__zoomIn">
       <div class="section m-4">
         <div class="row">
-          <div class="col">
+          <div class="col-md-6">
             <h1>About TAJSEER</h1>
             <p style="width: 50%; font-weight: 600;">
               Tajseer is a company specialized in the development of Elearning
@@ -39,7 +39,7 @@
             </p>
             <button class="btnNav">White Peper</button>
           </div>
-          <div class="col">
+          <div class="col-md-6">
             <div class="circleImg">
               <img src="8552600.png" class="aiImg moving-image" alt="" />
             </div>
