--- a/src/cards/card.html
+++ b/src/cards/card.html
@@ -17,8 +17,8 @@
 
   <img src="../imges/astronaut.png" alt="" width="200" height="200" class="shake">
   <section class="cards-containaer">
-    <h1 data-text="&nbsp;TAJSEER Services!&nbsp;">&nbsp;TAJSEER Services!&nbsp;</h1>
-    <h3 style="color: #fff;">We provide optimal solutions to meet the future of education in the world.</h3>
+    <h1 class="mt-4" data-text="&nbsp;TAJSEER Services!&nbsp;">&nbsp;TAJSEER Services!&nbsp;</h1>
+    <p style="color: #fff;">We provide optimal solutions to meet the future of education in the world.</p>
     <div class="card-container w-100 animate__animated animate__zoomIn">
 
       <div class="cardx">
