update about albyari

--- a/src/AboutFolder/about.html
+++ b/src/AboutFolder/about.html
@@ -23,9 +23,9 @@
     <main class="animate__animated animate__zoomIn">
       <div class="section m-4">
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-xl-6 aboutText">
             <h1>About TAJSEER</h1>
-            <p style="width: 50%; font-weight: 600;">
+            <p class="pAbout">
               Tajseer is a company specialized in the development of Elearning
               courses, distance learning and training, virtual reality, STEM
               methodology, and training/educational consultancy based on the
@@ -37,12 +37,9 @@
               international foundations and standards, to raise the educational
               and academic level of the target groups.
             </p>
-            <button class="btnNav">White Peper</button>
           </div>
-          <div class="col-md-6">
-            <div class="circleImg">
+          <div class="col-xl-6 circleImg">
               <img src="8552600.png" class="aiImg moving-image" alt="" />
-            </div>
           </div>
         </div>
       </div>
