update about albyari

--- a/src/AboutFolder/about.html
+++ b/src/AboutFolder/about.html
@@ -20,10 +20,11 @@
   </head>
 
   <body>
+    <div class="container">
     <main class="animate__animated animate__zoomIn">
       <div class="section m-4">
         <div class="row">
-          <div class="col-xl-6 aboutText">
+          <div class="col-md-6 aboutText">
             <h1>About TAJSEER</h1>
             <p class="pAbout">
               Tajseer is a company specialized in the development of Elearning
@@ -38,14 +39,14 @@
               and academic level of the target groups.
             </p>
           </div>
-          <div class="col-xl-6 circleImg">
+          <div class="col-md-6 circleImg">
               <img src="8552600.png" class="aiImg moving-image" alt="" />
           </div>
         </div>
       </div>
       <!-- <hr style="width: 50%; margin: 2% 0 2% 25%; color: #fff; height: 1px;"> -->
-      <div class="rowAbout">
-        <div class="card-container">
+      <div class="row rowAbout">
+        <div class="col-md-5 m-3 card-container">
           <div class="cardi">
             <div class="img-content">
               <img src="../imges/mission.png" alt="notLaod" />
@@ -60,7 +61,7 @@
             </div>
           </div>
         </div>
-        <div class="card-container">
+        <div class="col-md-5 card-container">
           <div class="cardi">
             <div class="img-content">
               <img src="../imges/vision.png" alt="notLaod">
@@ -77,7 +78,9 @@
           </div>
         </div>
       </div>
-      <hr style="width: 50%; margin: 2% 0 2% 25%; color: #fff; height: 1px;">
+
+      <hr style="width: 70%; margin: 3% auto; color: #fff; height: 3px;">
+
       <div class="mainTextGrid">
         <h1>Our Partners</h1>
         <div class="photo-grid">
@@ -120,6 +123,8 @@
         </div>
       </div>
     </main>
+  </div>
+
     <footer>
       <div class="copyright-area">
         <div class="container">
