--- a/src/cardSlider/slider.html
+++ b/src/cardSlider/slider.html
@@ -16,7 +16,7 @@
   <body>
     <div class="textmain">
       <h1>Training and Consulting</h1>
-      <p style="width: 80%; font-size: calc(1.025em + 0.3vw)">
+      <p style="width: 80%; font-size: calc(0.80em + 0.01vw)">
         Tajseer provides distance learning and training services, virtual
         reality, STEM methodology, and training /educational consultancy. It has
         been working to meet the needs of real and virtual e-learning solutions,
@@ -50,7 +50,7 @@
       </div>
       <div
         class="slide"
-        style="background-image: url('../imges/s3.png'); background-size: cover;";
+        style="background-image: url('../imges/s3.png');";
       >
         <h3>thinking</h3>
       </div>
@@ -83,7 +83,7 @@
               <div class="copyright-text">
                 <p>
                   Copyright &copy; 2023, All Right Reserved
-                  <a href="/html.html">Tajseer</a>
+                  <a href="https://eranovel.com/">NovelEra</a>
                 </p>
               </div>
             </div>
