--- a/src/footer/footer.html
+++ b/src/footer/footer.html
@@ -120,7 +120,7 @@
               <div class="copyright-text">
                 <p>
                   Copyright &copy; 2023, All Right Reserved
-                  <a href="">Tajsser</a>
+                  <a href="https://eranovel.com/">NovelEra</a>
                 </p>
               </div>
             </div>
