--- a/src/cards/card.html
+++ b/src/cards/card.html
@@ -18,7 +18,7 @@
   <img src="../imges/astronaut.png" alt="" width="200" height="200" class="shake">
   <section class="cards-containaer">
     <h1 class="mt-4" data-text="&nbsp;TAJSEER Services!&nbsp;">&nbsp;TAJSEER Services!&nbsp;</h1>
-    <p style="color: #fff; font-size: 1.5rem; font-weight: 600;">We provide optimal solutions to meet the future of education in the world.</p>
+    <p style="color: #fff; font-size: 1.5em; font-weight: 600;" class="text-center mt-2">We provide optimal solutions to meet the future of education in the world.</p>
     <div class="card-container w-100 animate__animated animate__zoomIn">
 
       <div class="cardx">
@@ -97,7 +97,7 @@
             <div class="copyright-text">
               <p>
                 Copyright &copy; 2023, All Right Reserved
-                <a href="/html.html">Tajseer</a>
+                <a href="https://eranovel.com/">NovelEra</a>
               </p>
             </div>
           </div>
