--- a/src/AboutFolder/about.html
+++ b/src/AboutFolder/about.html
@@ -20,12 +20,13 @@
   </head>
 
   <body>
-    <div class="container">
+    <!-- <div class="container"> -->
     <main class="animate__animated animate__zoomIn">
       <div class="section m-4">
         <div class="row">
-          <div class="col-md-6 aboutText">
-            <h1>About TAJSEER</h1>
+          <div class="col-md-1"></div>
+          <div class="col-md-4 aboutText">
+            <h1 class="mb-3">About TAJSEER</h1>
             <p class="pAbout">
               Tajseer is a company specialized in the development of Elearning
               courses, distance learning and training, virtual reality, STEM
@@ -52,7 +53,7 @@
               <img src="../imges/mission.png" alt="notLaod" />
             </div>
             <div class="content">
-              <p class="heading">Vision</p>
+              <h3 class="heading text-center">Vision</h3>
               <p>
                 Play a unique role in enhancing the educational and academic
                 level in educational institutions to keep pace with the vast
@@ -67,7 +68,7 @@
               <img src="../imges/vision.png" alt="notLaod">
                          </div>
             <div class="content">
-              <p class="heading">Mission</p>
+              <h3 class="heading text-center">Mission</h3>
               <p>
                 We strive to provide an interactive learning environment for the
                 largest segment of society by using the latest software
@@ -82,7 +83,7 @@
       <hr style="width: 70%; margin: 3% auto; color: #fff; height: 3px;">
 
       <div class="mainTextGrid">
-        <h1>Our Partners</h1>
+        <h1 class="text-center">Our Partners</h1>
         <div class="photo-grid">
           <div class="grid-item">
             <img src="../imges/cengage.svg" alt="Photo 1" />
@@ -133,7 +134,7 @@
               <div class="copyright-text">
                 <p>
                   Copyright &copy; 2023, All Right Reserved
-                  <a href="/html.html">Tajseer</a>
+                  <a href="https://eranovel.com/">NovelEra</a>
                 </p>
               </div>
             </div>
