--- a/src/cardSlider/slider.html
+++ b/src/cardSlider/slider.html
@@ -16,7 +16,7 @@
   <body>
     <div class="textmain">
       <h1>Training and Consulting</h1>
-      <p style="width: 80%; font-size: calc(0.80em + 0.01vw)">
+      <p>
         Tajseer provides distance learning and training services, virtual
         reality, STEM methodology, and training /educational consultancy. It has
         been working to meet the needs of real and virtual e-learning solutions,
@@ -35,23 +35,13 @@
       </p>
     </div>
     <div class="container-slid">
-      <div
-        class="slide"
-        style="
-          background-image: url('../imges/s1.png');
-        "
-      >
+      <div class="slide" style="background-image: url('../imges/s1.png')">
         <h3>education</h3>
       </div>
-      <div
-        class="slide"
-        style="background-image: url('../imges/s2.png');" >
+      <div class="slide" style="background-image: url('../imges/s2.png')">
         <h3>technology</h3>
       </div>
-      <div
-        class="slide"
-        style="background-image: url('../imges/s3.png');";
-      >
+      <div class="slide" style="background-image: url('../imges/s3.png')" ;>
         <h3>thinking</h3>
       </div>
       <!-- <div
