--- a/src/cards/card.html
+++ b/src/cards/card.html
@@ -17,8 +17,10 @@
 
   <img src="../imges/astronaut.png" alt="" width="200" height="200" class="shake">
   <section class="cards-containaer">
+    <div class="textmain">
     <h1 class="mt-4" data-text="&nbsp;TAJSEER Services!&nbsp;">&nbsp;TAJSEER Services!&nbsp;</h1>
     <p style="color: #fff; font-size: 1.5em; font-weight: 600;" class="text-center mt-2">We provide optimal solutions to meet the future of education in the world.</p>
+  </div>
     <div class="card-container w-100 animate__animated animate__zoomIn">
 
       <div class="cardx">
